syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.jokerconf.grpcdemo";

package ru.jokerconf.grpcdemo;

import "weather.proto";

service WeatherService {
    rpc GetCurrent (WeatherRequest) returns (WeatherResponse);
}